infrastructure/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - monitoring.ynoacamino.me
      secretName: monitoring-tls

  rules:
    - host: monitoring.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
